<resources>
    <string name="app_name">ISAK Laboratory App</string>
    <string name="main_logo_description">Atom Symbol</string>
    <string name="empty_logo_description">Bored Face</string>
    <string name="welcome_message">Welcome to the ISAK Lab App</string>
    <string name="welcome_instructions">Please LOG IN with your ISAK ACCOUNT&#8230;</string>
    <string name="empty_screen_message">Looks like your not up to anything. *Sighs*</string>
    <string name="login_label">E-mail</string>
    <string name="login_form_hint">e.g. 2020.firstname.lastname@uwcisak.jp</string>
    <string name="login_button_text">LOG IN WITH ISAK GOOGLE ACCOUNT</string>
    <string name="loading_info">Loading Item Indices&#8230;</string>
    <string name="no_internet_message">No Internet Connection Available</string>
    <string name="no_google_play_services">This app requires Google Play Services. Please install relaunch this app.</string>
    <string name="document_id">1cKLXUmRcHRxQPwPXpK9gbQjYnoxScpiaH3n9FKrA0nA</string>
    <string name="view_range_item_index">Items Index!A2:E</string>
    <string name="no_results_message">No results returned</string>
    <string name="request_cancelled_message">Request cancelled&#8230;</string>
    <string name="error_precursor_message">This happened: </string>
    <string name="permission_rationale">This app needs to access your ISAK account.</string>
    <string name="title_activity_menu">Menu Activity</string>
    <string name="menu_instructions">I am&#8230;</string>
    <string name="borrow_button_text">Borrowing</string>
    <string name="return_button_text">Returning</string>
    <string name="instructions_button_text">New to This?</string>
    <string name="close_button_text">Done</string>
    <string name="borrowing_window_header">Borrowing the following Items</string>
    <string name="add_item_button_text">Add Item</string>
    <string name="done_button_text">Done</string>
    <string name="list_header_col_1_text">Item Name</string>
    <string name="list_header_col_2_text">Quantity</string>
    <string name="list_header_col_3_text">Date Borrowed</string>
    <string name="list_row_placeholder_text">Lorem ipsum</string>
    <string name="done_return_button_text">Return Items</string>
    <string name="permission_granted_message">Permission Granted</string>
    <string name="permission_denied_message">Permission Denied</string>
    <string name="request_permission__message">You need to allow access to both the permissions</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="camera_handler_header">Scan Result</string>
    <string name="missing_from_index_message">Item not in the list. Try Again!</string>
    <string name="already_exists_message">Item already in the list!</string>
    <string name="allowable_domain">uwcisak.jp</string>
    <string name="view_range_student_possession">Student Possession!A2:B</string>
    <string name="forbidden_error_message_search_key">Forbidden</string>
    <string name="updating_ledger_message">Updating Ledger. Please wait.</string>
    <string name="view_range_item_ledger">Item Ledger!A1:D</string>
    <string name="return_status_text">return</string>
    <string name="borrow_status_text">return</string>
    <string name="view_range_student_possession_ltd">Student Possession!</string>
    <string name="item_removed_message_append">Student Possession!</string>
</resources>
